gcke/scimitar/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scimitar-frontend
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scimitar-app
  template:
    metadata:
      labels:
        app: scimitar-app
        tier: frontend
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: scimitar-pvc
      containers:
        - name: scimitar-app
          image: matsubokkuri/scimitar-app:4.2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-storage
              mountPath: /config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scimitar-backend
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scimitar-backend
      tier: backend
  template:
    metadata:
      labels:
        app: scimitar-backend
        tier: backend
    spec:
      containers:
        - name: scimitar-backend
          image: matsubokkuri/scimitar-backend:4.2
          imagePullPolicy: IfNotPresent
      volumes:
        - name: information-volume
          configMap:
            name: exercise-config
            items:
              - key: information.txt
                path: information.txt
      restartPolicy: Always
