gcke/scimitar/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scimitar-app-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: scimitar-app
    tier: frontend
  ports:
    - name: scimitar-app
      port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: scimitar-backend-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: scimitar-backend
    tier: backend
  ports:
    - name: scimitar-backend
      port: 80
      protocol: TCP
      targetPort: 3010
