gcke/scimitar/manifests/gateway.yaml
apiVersion:  gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name:  scimitar-gateway
  namespace: exercises
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
