gcke/scimitar/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: scimitar-app-route
  namespace: exercises
spec:
  parentRefs:
  - name: scimitar-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: scimitar-app-svc
      namespace: exercises
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: scimitar-backend-route
  namespace: exercises
spec:
  parentRefs:
    - name: scimitar-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
        - path:
            type: PathPrefix
            value: /pings
      backendRefs:
        - name: scimitar-backend-svc
          namespace: exercises
          port: 80
